Attempt 1 to fix the feature topic on mobile phones

--- a/src/components/services/features.css
+++ b/src/components/services/features.css
@@ -65,8 +65,9 @@ body{
       margin-top: -150px;
     }
 
+
     .feat-topic{
-      margin-left: 0;
+      margin-left: 0px;
     }
 
     .question-topic{
